Changes

from version 0.97 to 0.98

improvement:
- When the SIX values chart is in scrolling mode the the y-axis range
  is automatically set, the range is now set so that the data of the last shown
  minutes fit in.
  (Previously the y-range was the one of all data in the chart.) 


from version 0.96 to 0.97

bugfix:
- fix that endless repeats of multiple pumping steps could lead to a crash


from version 0.95 to 0.96

improvement:
- a started calibration can now be aborted by right-clicking on the chart

bugfixes:
- fix the calibration on a channel containing the mean of two other channels
- axis settings dialog fixes
- definition file handling fixes


from version 0.94 to 0.95

improvements:
- to change the background color of a chart, right-click on the chart
  The advantage is that now every left double-click on a chart axis will
  open the axis settings dialog and not sometimes the color dialog.
- when changing the chart axis properties (by double-clicking on an axis)
  the settings for min/max show now as preset the current min/max values 

bugfixes:
- when temperature was displayed in the SIX chart its axis range was
  sometimes incorrect
- when the calibration concentration was changed in the dialog, it was not
  always taken into account


from version 0.93 to 0.94

bugfixes:
- when the chart contained more than 20.000 data points the program began
  to become slow
- when the chart is not in scrolling mode the data range was not updated in
  every case for the new data  


from version 0.92 to 0.93

improvement:
- rearrange the tab 'Pump Control' to make the main program window fit also to
  smaller high-DPI laptop screens
  
bugfix:
- assure that the buttons in the charts don't disappear when the main window
  size is changed


from version 0.91 to 0.92

improvements:
- zooming in the charts is now also possible by dragging up-right
- the zooming rectangle border is now properly shown
- stop the chart data scrolling while calibrating